# OpenSpain

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_skill.yml
.github/workflows/: README.md  smoke-all.yml  validate-services.yml
data/schemas/: service.schema.json
docs/: README.md
docs/adr/: 0001-tipologia-agent-accessibility.md  0002-federacion-mcps-por-dominio.md  0003-openspain-core-desde-el-primer-mcp.md  0004-knowledge-data-tools-planes-separados.md  0005-dos-superficies-skills-mcp.md  README.md
docs/architecture/: overview.md  service-yml-schema.md
docs/services/: aeat.md  aemet.md  aena.md  bde.md  bne.md  boe.md  borme.md  catastro.md  cis.md  cnig.md  cnmc.md  congreso.md  cte.md  dataestur.md  datos-gob-es.md  educacion.md  esios.md  ine.md  infosubvenciones.md  jec.md  miteco.md  placsp.md  puertos.md  rtve.md  sanidad.md  seguridad-social.md  senado.md  sepe.md  snczi.md  transparencia.md
mcps/catastro/: README.md  pyproject.toml
mcps/catastro/src/catastro/: __init__.py  normalization.py  server.py  service.py
mcps/catastro/tests/: test_service.py
mcps/snczi/: README.md  pyproject.toml
mcps/snczi/src/snczi/: __init__.py  server.py  service.py
mcps/snczi/tests/: test_service.py
openspain/: SKILL.md  service.yml
scripts/: validate_services.py
tests/aeat/: prompts.md  smoke.sh
tests/aemet/: prompts.md  smoke.sh
tools/: README.md
(+453 files in other folders)
