[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openspain-catastro"
version = "0.1.0"
description = "MCP server for Spain Cadastre public data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
]

[project.scripts]
openspain-catastro-mcp = "catastro.server:main"

[tool.setuptools.packages.find]
where = ["src"]
